fix: dashboard, feat: existing user validation

--- a/src/app/components/register-merchant/register-merchant.component.html
+++ b/src/app/components/register-merchant/register-merchant.component.html
@@ -9,6 +9,7 @@
             label="Enter Information"
             formGroupName="merchantData"
             [stepControl]="registerMerchantForm.get('merchantData')!"
+            editable="false"
           >
             <app-register-merchant-form
               (formSubmitted)="addMerchant($event)"
