fix: backend, feat: new back end logic, products page & more

--- a/src/app/components/home-products/home-products.component.html
+++ b/src/app/components/home-products/home-products.component.html
@@ -8,20 +8,23 @@
       <a routerLink="/products" class="underline">View all..</a>
     </div>
 
-    <div class="grid grid-cols-1 md:grid-cols-6 lg:grid-cols-12 gap-7">
-      <div class="md:col-span-4" *ngFor="let product of products">
+    <div class="grid grid-cols-1 md:grid-cols-6 lg:grid-cols-12 gap-4">
+      <div
+        class="md:col-span-3"
+        *ngFor="let product of products | slice : 0 : 4"
+      >
         <div
-          class="max-w-md bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700"
+          class="max-w-md bg-white border border-gray-200 rounded-lg shadow-sm dark:bg-gray-800 dark:border-gray-700"
         >
-          <a routerLink="/products/{{ product.id }}">
+          <a routerLink="/products/{{ product._id }}">
             <img
-              class="rounded-t-lg bg-cover h-64 w-full"
+              class="rounded-t-lg bg-cover h-48 w-full transition-all duration-300 opacity-90 hover:opacity-100"
               src="{{ product.image }}"
               alt="{{ product.name }}"
             />
           </a>
           <div class="p-5">
-            <a routerLink="/products/{{ product.id }}">
+            <a routerLink="/products/{{ product._id }}">
               <h5
                 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white truncate"
               >
@@ -31,10 +34,10 @@
             <p
               class="mb-3 font-normal text-gray-700 dark:text-gray-400 leading-loose truncate"
             >
-              {{ product.detail }}
+              {{ product.description }}
             </p>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Price: RM {{ product.price }} - Rating: {{ product.rating }}/5
+              Price: RM {{ product.price }}
             </p>
           </div>
         </div>
