--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -71,7 +71,7 @@
             <a
               routerLink="/products"
               routerLinkActive="bg-blue-700 text-white md:text-blue-700 md:dark:text-blue-500"
-              [routerLinkActiveOptions]="{ exact: true }"
+              [routerLinkActiveOptions]="{ exact: false }"
               class="block py-2 pl-3 pr-4 text-gray-900 rounded md:bg-transparent md:p-0"
               >Products</a
             >
@@ -86,19 +86,10 @@
             <a
               routerLink="/user-dashboard"
               routerLinkActive="bg-blue-700 text-white md:text-blue-700 md:dark:text-blue-500"
-              [routerLinkActiveOptions]="{ exact: true }"
+              [routerLinkActiveOptions]="{ exact: false }"
               class="block py-2 pl-3 pr-4 text-gray-900 rounded md:bg-transparent md:p-0"
               aria-current="page"
               >Dashboard</a
-            >
-          </li>
-          <li>
-            <a
-              routerLink="/user-dashboard/manage"
-              routerLinkActive="bg-blue-700 text-white md:text-blue-700 md:dark:text-blue-500"
-              [routerLinkActiveOptions]="{ exact: true }"
-              class="block py-2 pl-3 pr-4 text-gray-900 rounded md:bg-transparent md:p-0"
-              >Manage</a
             >
           </li>
         </ng-container>
@@ -122,7 +113,7 @@
             <a
               routerLink="/products"
               routerLinkActive="font-bold"
-              [routerLinkActiveOptions]="{ exact: true }"
+              [routerLinkActiveOptions]="{ exact: false }"
               >Products</a
             >
           </li>
@@ -133,16 +124,8 @@
             <a
               routerLink="/user-dashboard"
               routerLinkActive="font-bold"
-              [routerLinkActiveOptions]="{ exact: true }"
+              [routerLinkActiveOptions]="{ exact: false }"
               >Dashboard</a
-            >
-          </li>
-          <li>
-            <a
-              routerLink="/user-dashboard/manage"
-              routerLinkActive="font-bold"
-              [routerLinkActiveOptions]="{ exact: true }"
-              >Manage</a
             >
           </li>
         </ng-container>
