feat: midtrans, review & view analytics front end

--- a/src/app/components/home-products/home-products.component.html
+++ b/src/app/components/home-products/home-products.component.html
@@ -37,7 +37,7 @@
               {{ product.description }}
             </p>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Price: RM {{ product.price }}
+              Price: MYR {{ product.price }}
             </p>
           </div>
         </div>
