--- a/src/app/pages/dashboard/account-management/merchant-detail/merchant-detail.component.html
+++ b/src/app/pages/dashboard/account-management/merchant-detail/merchant-detail.component.html
@@ -19,7 +19,7 @@
         <p>Phone Number: {{ merchant?.phoneNumber }}</p>
         <p>Merchant Description: {{ merchant?.companyDesc }}</p>
 
-        <p>Document: ???</p>
+        <p>Document: ongoing</p>
 
         <div class="space-x-1.5">
           <button
