--- a/src/app/pages/dashboard/user-dashboard/dashboard-user-index.component.html
+++ b/src/app/pages/dashboard/user-dashboard/dashboard-user-index.component.html
@@ -81,7 +81,14 @@
               </li>
               <li>
                 <a
-                  routerLink="/user-dashboard/my-profile"
+                  routerLink="review-products"
+                  class="underline"
+                  >Review Tourism Products</a
+                >
+              </li>
+              <li>
+                <a
+                  routerLink="my-profile"
                   class="underline"
                   >My Profile</a
                 >
@@ -95,9 +102,16 @@
             <ul class="text-sm">
               <li>
                 <a
-                  routerLink="/user-dashboard/account-management"
+                  routerLink="account-management"
                   class="underline"
                   >Account Management</a
+                >
+              </li>
+              <li>
+                <a
+                  routerLink="view-analytics"
+                  class="underline"
+                  >View Analytics Report</a
                 >
               </li>
             </ul>
@@ -112,14 +126,21 @@
               <ul class="text-sm space-y-4">
                 <li>
                   <a
-                    routerLink="/user-dashboard/product-management"
+                    routerLink="product-management"
                     class="underline"
                     >Product Management</a
                   >
                 </li>
                 <li>
                   <a
-                    routerLink="/user-dashboard/change-merchant-password"
+                    routerLink="view-analytics"
+                    class="underline"
+                    >View Analytics Report</a
+                  >
+                </li>
+                <li>
+                  <a
+                    routerLink="change-merchant-password"
                     class="underline"
                     >Change Password</a
                   >
