--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,41 +1,40 @@
-<footer class="container mx-auto bg-white">
-  <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+<footer class="bg-blue-900/90">
+  <div class="container mx-auto max-w-7xl p-4 py-6 lg:py-8">
     <div class="md:flex md:justify-between">
       <div class="mb-6 md:mb-0">
         <a routerLink="/" class="flex items-center">
           <span
-            class="self-center text-2xl font-semibold tracking-wide whitespace-nowrap"
+            class="text-white self-center text-2xl font-semibold tracking-wide whitespace-nowrap"
             >PromoTourism</span
           >
         </a>
       </div>
       <div>
         <h2
-          class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white"
+          class="mb-6 text-sm font-semibold uppercase text-white"
         >
           Legal
         </h2>
-        <ul class="text-gray-500 dark:text-gray-400 font-medium">
+        <ul class="text-white font-medium">
           <li class="mb-4">
-            <a href="#" class="hover:underline">Privacy Policy</a>
+            <a href="/" class="hover:underline">Privacy Policy</a>
           </li>
           <li>
-            <a href="#" class="hover:underline">Terms &amp; Conditions</a>
+            <a href="/" class="hover:underline">Terms &amp; Conditions</a>
           </li>
         </ul>
       </div>
     </div>
-    <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
-    <div class="sm:flex sm:items-center sm:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center"
+    <div class="sm:flex sm:items-center sm:justify-between pt-10">
+      <span class="text-gray-300 text-xs sm:text-center"
         >© 2023
-        <a href="https://flowbite.com/" class="hover:underline">PromoTourism</a
+        <a href="/" class="hover:underline">PromoTourism</a
         >. All Rights Reserved.
       </span>
       <div class="flex mt-4 space-x-5 sm:justify-center sm:mt-0">
         <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900"
+          href="/"
+          class="text-white"
         >
           <svg
             class="w-4 h-4"
@@ -53,8 +52,8 @@
           <span class="sr-only">Facebook page</span>
         </a>
         <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900"
+          href="/"
+          class="text-white"
         >
           <svg
             class="w-4 h-4"
@@ -70,8 +69,8 @@
           <span class="sr-only">Discord community</span>
         </a>
         <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900"
+          href="/"
+          class="text-white"
         >
           <svg
             class="w-4 h-4"
@@ -89,8 +88,8 @@
           <span class="sr-only">Twitter page</span>
         </a>
         <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900"
+          href="/"
+          class="text-white"
         >
           <svg
             class="w-4 h-4"
@@ -108,8 +107,8 @@
           <span class="sr-only">GitHub account</span>
         </a>
         <a
-          href="#"
-          class="text-gray-500 hover:text-gray-900"
+          href="/"
+          class="text-white"
         >
           <svg
             class="w-4 h-4"
