--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -1,14 +1,14 @@
 <section
   class="bg-center bg-no-repeat bg-cover bg-[url('https://images.unsplash.com/photo-1539635278303-d4002c07eae3?q=80&w=3270&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')] bg-gray-700 bg-blend-multiply"
 >
-  <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-52">
+  <div class="px-4 mx-auto max-w-screen-xl text-center py-14 lg:py-32">
     <h1
       class="mb-4 text-4xl font-extrabold tracking-tight leading-relaxed text-white lg:text-5xl"
     >
       Find your special local experience
     </h1>
     <p
-      class="mb-8 text-lg leading-loose font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
+      class="mb-8 text-lg leading-relaxed font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48"
     >
       Get your good experiences and good tourism product deals with PromoTourism!
     </p>
