--- a/src/app/components/register-merchant-stepper/register-merchant-stepper.component.html
+++ b/src/app/components/register-merchant-stepper/register-merchant-stepper.component.html
@@ -1,12 +1,12 @@
 <ol
-  class="flex flex-wrap items-center gap-3 w-full p-3 text-sm font-medium text-center text-gray-500 bg-white border border-gray-200 rounded-lg shadow-sm dark:text-gray-400 sm:text-base dark:bg-gray-800 dark:border-gray-700 sm:p-4 sm:space-x-1 mb-4"
+  class="flex flex-wrap items-center gap-3 w-full py-3 text-sm font-medium text-center text-gray-500 bg-white border-b border-gray-200 rounded-lg sm:text-base sm:pb-4 sm:space-x-1 mb-4"
 >
   <li
     class="flex items-center text-blue-600 dark:text-blue-500"
     *ngFor="let step of steps; let i = index"
   >
     <span
-      class="flex items-center justify-center w-5 h-5 me-2 text-xs border border-blue-600 rounded-full shrink-0 dark:border-blue-500"
+      class="flex items-center justify-center w-5 h-5 me-2 text-xs border border-blue-600 rounded-full"
     >
       {{ i + 1 }}
     </span>
