--- a/src/app/components/why-us/why-us.component.html
+++ b/src/app/components/why-us/why-us.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-4 pt-10">
+<div class="container mx-auto p-4 pb-10">
   <div class="mx-auto w-full max-w-screen-xl space-y-3">
     <h1 class="text-2xl tracking-wide font-semibold leading-relaxed">
       Why choose PromoTourism?
