--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
     <div class="container mx-auto border-t border-gray-200/80 max-w-7xl">
       <div class="flex items-center p-4">
         <p class="text-sm">
-          &copy; 2023 &dash; PromoTourism &dash; Made with ❤️ for BIT216
+          &copy; 2023 &dash; PromoTourism &dash; Made with ❤️
         </p>
       </div>
     </div>
