--- a/src/app/pages/checkout-product/checkout-product.component.html
+++ b/src/app/pages/checkout-product/checkout-product.component.html
@@ -1,61 +1,71 @@
-<app-home>
-  <div class="container max-w-lg mx-auto p-4">
-    <div class="text-lg tracking-wide font-semibold leading-relaxed py-4">
-      Checkout: {{ product?.name }} Ticket
-    </div>
-
-    <div class="bg-gray-100 shadow rounded-lg p-4">
-      <form class="space-y-4" [formGroup]="checkOutDataForm" autocomplete="off">
-        <div class="space-y-2">
-          <label for="date">Select your schedule date</label>
-          <input
-            id="date"
-            type="date"
-            formControlName="date"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-            placeholder="Date"
-            [min]="minDate"
-          />
-        </div>
-        <div class="space-y-2">
-          <label for="amountPeople">Amount of people</label>
-          <input
-            min="1"
-            id="amountPeople"
-            type="number"
-            formControlName="amountPeople"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-            placeholder="Amount of people"
-          />
-        </div>
-        <div
-          class="text-md"
-          *ngIf="
-            product &&
-            product.price !== undefined &&
-            checkOutDataForm?.get('amountPeople')?.value !== undefined
-          "
-        >
-          Price:
-          <span class="font-bold">
-            MYR
-            {{
-              (
-                product.price * checkOutDataForm.get("amountPeople")?.value
-              ).toFixed(2)
-            }}
-          </span>
-        </div>
-        <button
-          id="checkOutBtn"
-          [disabled]="checkOutDataForm.invalid"
-          [class.disabled]="checkOutDataForm.invalid"
-          (click)="processPaymentDirect()"
-          class="transition-all bg-blue-700 hover:bg-blue-900 rounded-lg shadow py-1 px-2 text-md text-white"
-        >
-          Checkout Now
-        </button>
-      </form>
-    </div>
+<div class="container mx-auto">
+  <div class="text-lg tracking-wide font-semibold leading-relaxed py-4">
+    Order Information
   </div>
-</app-home>
+
+  <div class="border shadow rounded-lg p-4 pb-0">
+    <form class="space-y-4" [formGroup]="checkOutDataForm" autocomplete="off">
+      <div class="space-y-2">
+        <label for="date">Select your schedule date</label>
+        <input
+          id="date"
+          type="date"
+          formControlName="travel_date"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+          placeholder="Date"
+          [min]="minDate"
+        />
+      </div>
+      <div class="space-y-2 flex items-center justify-between">
+        <label for="amountPeople">Amount of people</label>
+
+        <div class="flex items-center gap-3">
+          <button
+            (click)="decreaseAmount()"
+            *ngIf="amount > 1"
+            class="bg-blue-700 text-white rounded-full py-0.5 px-2 text-sm focus:outline-none"
+          >
+            -
+          </button>
+          <span class="bg-white p-1 rounded-lg cursor-default text-md">{{
+            amount
+          }}</span>
+          <input
+            id="amountPeople"
+            formControlName="total_purchase"
+            [value]="amount"
+            type="hidden"
+          />
+          <button
+            (click)="increaseAmount()"
+            class="bg-blue-700 text-white rounded-full py-0.5 px-2 text-sm focus:outline-none"
+          >
+            +
+          </button>
+        </div>
+      </div>
+      <div class="flex justify-between items-center pt-5">
+        <span class="text-md">Price</span>
+        <span class="font-bold text-2xl"> {{ product?.price | currency: 'MYR' }} </span>
+      </div>
+      <div class="mt-4">
+        <ng-container *ngIf="isLoggedIn">
+          <button
+            (click)="checkOut()"
+            [class.disabled]="checkOutDataForm.invalid"
+            [disabled]="checkOutDataForm.invalid"
+            class="bg-blue-700 p-2 text-sm text-white rounded-lg mb-3"
+          >
+            Pay with PayPal
+          </button>
+        </ng-container>
+
+        <ng-container *ngIf="!isLoggedIn">
+          <p class="py-4 text-xs tracking-wide">
+            You need to Login or Register to place an order!
+          </p>
+        </ng-container>
+      </div>
+    </form>
+  </div>
+</div>
