--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <app-home>
-  <div class="container max-w-7xl mx-auto p-4">
+  <div class="container max-w-7xl mx-auto p-4 pb-10">
     <div class="text-2xl tracking-wide font-semibold leading-relaxed py-4">
       Tourism Products
     </div>
@@ -29,7 +29,7 @@
               {{ product.description }}
             </p>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Price: MYR {{ product.price }} - Rating: 5/5
+              Price: {{ product.price | currency: 'MYR' }} - Rating: 5/5
             </p>
           </div>
         </div>
