--- a/src/app/pages/review-tourism-product/review-tourism-product.component.html
+++ b/src/app/pages/review-tourism-product/review-tourism-product.component.html
@@ -2,7 +2,7 @@
   <div class="container max-w-7xl mx-auto p-4">
     <div class="bg-gray-100 p-4 rounded-lg shadow space-y-4">
       <div class="flex flex-wrap justify-between items-center gap-2">
-        <div class="text-xl font-bold">Review Tourism Products</div>
+        <div class="text-xl font-bold">Purchase History</div>
       </div>
       <table
         class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
@@ -16,17 +16,20 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+          <tr
+            class="bg-white border-b dark:bg-gray-800 dark:border-gray-700"
+            *ngFor="let purchase of purchaseData; let i = index"
+          >
             <th
               scope="row"
               class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
             >
-              1
+              {{ i + 1 }}
             </th>
             <td class="px-6 py-4">
-              <a routerLink="test-page" class="underline"
-                >Petronas Twin Tower</a
-              >
+              <a routerLink="/invoice/{{ purchase._id }}" class="underline">{{
+                purchase.product_id
+              }}</a>
             </td>
           </tr>
         </tbody>
