--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+* {
+  scroll-behavior: smooth;
+}
 
 .disabled {
   opacity: 0.6;
