--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -1,11 +1,12 @@
 <div class="flex items-center min-h-screen">
-  <div class="container mx-auto p-8">
-    <div class="bg-white border rounded-lg shadow-lg p-8">
+  <div class="container mx-auto max-w-full lg:max-w-2xl p-4">
+    <div class="bg-white border rounded-lg shadow-lg p-4 lg:p-8">
       <div class="flex justify-between items-center mb-6">
         <h1 class="text-3xl font-bold">Invoice</h1>
+
         <span class="text-gray-500">{{ invoiceData?.id }}</span>
       </div>
-      <div class="flex justify-between items-center mb-6">
+      <div class="flex flex-wrap justify-between items-center gap-y-4 mb-6">
         <div class="text-gray-600">
           <h2 class="text-lg font-semibold">Billed To</h2>
           <p>
@@ -17,7 +18,7 @@
         </div>
         <div class="text-gray-600">
           <h2 class="text-lg font-semibold">Invoice Date</h2>
-          <p>{{ invoiceData?.create_time | date: 'longDate' }}</p>
+          <p>{{ invoiceData?.create_time | date : "dd/MM/YYYY" }}</p>
         </div>
       </div>
       <div class="overflow-x-auto" *ngIf="invoiceData">
@@ -27,7 +28,9 @@
               <th class="border-b-2 border-gray-200 text-left py-2">
                 Description
               </th>
-              <th class="border-b-2 border-gray-200 text-left py-2">Quantity</th>
+              <th class="border-b-2 border-gray-200 text-left py-2">
+                Quantity
+              </th>
               <th class="border-b-2 border-gray-200 text-left py-2">Price</th>
               <th class="border-b-2 border-gray-200 text-left py-2">Total</th>
             </tr>
@@ -50,16 +53,31 @@
           </tbody>
         </table>
       </div>
-      <div class="flex justify-start mt-6">
+      <div class="flex flex-wrap justify-between items-center mt-6">
         <div class="text-gray-600 text-lg">
-          <p>STATUS:
-            <span *ngIf="invoiceData?.status == 'COMPLETED'" class="text-green-500 font-bold">{{ invoiceData?.status }}</span>
-            <span *ngIf="invoiceData?.status == 'CREATED'" class="text-indigo-500 font-bold">{{ invoiceData?.status }}</span>
+          <p>
+            STATUS:
+            <span
+              *ngIf="invoiceData?.status == 'COMPLETED'"
+              class="text-green-500 font-bold"
+              >{{ invoiceData?.status }}</span
+            >
+            <span
+              *ngIf="invoiceData?.status == 'CREATED'"
+              class="text-indigo-500 font-bold"
+              >{{ invoiceData?.status }}</span
+            >
           </p>
+
+          <div *ngFor="let unit of invoiceData?.purchase_units" class="text-xs">
+            <p>Reference ID: {{ unit.reference_id }}</p>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="text-center mt-4 text-xs">&copy; PromoTourism</div>
+    <div class="text-center mt-4 text-xs">
+      &copy; {{ yearNow }} &dash; PromoTourism
+    </div>
   </div>
 </div>
