--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -29,7 +29,7 @@
               {{ product.description }}
             </p>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Price: {{ product.price | currency: 'MYR' }} - Rating: 5/5
+              Price: {{ product.price | currency: 'MYR' }}
             </p>
           </div>
         </div>
