--- a/src/app/pages/checkout-product/checkout-product.component.html
+++ b/src/app/pages/checkout-product/checkout-product.component.html
@@ -3,21 +3,25 @@
     Order Information
   </div>
 
-  <div class="border shadow rounded-lg p-4 pb-0">
+  <div class="border shadow rounded-lg p-4 pb-0 text-sm">
     <form class="space-y-4" [formGroup]="checkOutDataForm" autocomplete="off">
+      <label for="travel_date">Travel Date</label>
       <div class="space-y-2">
-        <label for="date">Select your schedule date</label>
         <input
-          id="date"
-          type="date"
+          id="travel_date"
+          type="text"
+          mwlFlatpickr
+          [allowInput]="false"
+          [disableMobile]="true"
+          [placeholder]="'Select date..'"
+          [options]="flatPickrConfig"
           formControlName="travel_date"
           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-          placeholder="Date"
           [min]="minDate"
         />
       </div>
       <div class="space-y-2 flex items-center justify-between">
-        <label for="amountPeople">Amount of people</label>
+        <label for="total_purchase">Total Purchase</label>
 
         <div class="flex items-center gap-3">
           <button
@@ -31,7 +35,7 @@
             amount
           }}</span>
           <input
-            id="amountPeople"
+            id="total_purchase"
             formControlName="total_purchase"
             [value]="amount"
             type="hidden"
@@ -46,25 +50,22 @@
       </div>
       <div class="flex justify-between items-center pt-5">
         <span class="text-md">Price</span>
-        <span class="font-bold text-2xl"> {{ product?.price | currency: 'MYR' }} </span>
+        <span class="font-bold text-xl">
+          {{ product?.price | currency : "MYR" }}
+        </span>
       </div>
       <div class="mt-4">
-        <ng-container *ngIf="isLoggedIn">
           <button
             (click)="checkOut()"
-            [class.disabled]="checkOutDataForm.invalid"
-            [disabled]="checkOutDataForm.invalid"
-            class="bg-blue-700 p-2 text-sm text-white rounded-lg mb-3"
+            [class.disabled]="isLoading"
+            [disabled]="isLoading"
+            class="transition-all bg-blue-700 hover:bg-blue-800 p-2 text-sm text-white rounded-lg mb-3"
           >
-            Pay with PayPal
+            <span *ngIf="isLoading" class="flex items-center gap-2"
+              ><span class="loader"></span> <span>Pay with PayPal</span></span
+            >
+            <span *ngIf="!isLoading">Pay with PayPal</span>
           </button>
-        </ng-container>
-
-        <ng-container *ngIf="!isLoggedIn">
-          <p class="py-4 text-xs tracking-wide">
-            You need to Login or Register to place an order!
-          </p>
-        </ng-container>
       </div>
     </form>
   </div>
