--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -1,13 +1,26 @@
 <app-home>
   <div class="container max-w-7xl mx-auto p-4 pb-10">
-    <div class="md:grid grid-cols-9 gap-5">
-      <div class="col-span-6 space-y-3">
+    <div class="md:grid grid-cols-9 gap-7">
+      <div class="col-span-6">
         <div class="text-2xl font-semibold leading-loose">
           {{ product?.name }}
         </div>
 
-        <div class="text-sm">
-          Provided by: {{ merchant?.name }} - Rating: 5/5
+        <div class="text-md mb-4 mt-2">
+          Provided by: {{ merchant?.name }} |
+          <ng-container *ngIf="reviews && reviews.length > 0; else noReviews">
+            <span class="text-yellow-500">&#9733;</span>
+            {{ getAverageRating(reviews).toFixed(1) }} |
+            {{
+              reviews.length === 1
+                ? "1 user review"
+                : reviews.length + " user reviews"
+            }}
+          </ng-container>
+
+          <ng-template #noReviews>
+            <span>No review available</span>
+          </ng-template>
         </div>
 
         <div class="space-y-3">
@@ -21,9 +34,7 @@
 
           <div>
             <article class="flex flex-col gap-3 leading-loose">
-              <div class="text-xl font-semibold leading-loose">
-                Description
-              </div>
+              <div class="text-xl font-semibold leading-loose">Description</div>
 
               <p>{{ product?.description }}</p>
 
@@ -45,32 +56,63 @@
 
     <div class="text-xl font-semibold leading-loose my-4">Reviews</div>
 
-    <div class="lg:grid grid-cols-4 gap-4 font-semibold tracking-wide">
-      <div class="col-span-2">
-        <div class="border rounded-lg">
-          <div class="flex justify-between items-center border-b p-4">
-            <div>
-              Rating: 5
+    <div
+      class="grid grid-cols-1 lg:grid-cols-4 gap-4 lg:gap-7 font-semibold tracking-wide"
+    >
+      <ng-container *ngIf="reviews && reviews.length > 0">
+        <div
+          class="lg:col-span-2"
+          *ngFor="let reviewWithUser of reviewsWithUsers"
+        >
+          <div class="border rounded-lg">
+            <div class="flex justify-between items-center border-b p-4">
+              <div class="flex items-center gap-1">
+                <div class="text-yellow-300">
+                  <span *ngIf="reviewWithUser.reviewData.rating >= 1"
+                    >&#9733;</span
+                  >
+                  <span *ngIf="reviewWithUser.reviewData.rating >= 2"
+                    >&#9733;</span
+                  >
+                  <span *ngIf="reviewWithUser.reviewData.rating >= 3"
+                    >&#9733;</span
+                  >
+                  <span *ngIf="reviewWithUser.reviewData.rating >= 4"
+                    >&#9733;</span
+                  >
+                  <span *ngIf="reviewWithUser.reviewData.rating >= 5"
+                    >&#9733;</span
+                  >
+                </div>
+                <div>Rating: {{ reviewWithUser.reviewData.rating }}</div>
+              </div>
+
+              <div>
+                {{ reviewWithUser.reviewData.createdAt | date : "longDate" }}
+              </div>
             </div>
 
-            <div>
-              Review Date
-            </div>
-          </div>
-
-          <div class="text-xl py-7 px-4">Review here</div>
-
-          <div class="flex justify-between items-center border-t p-4">
-            <div>
-              Customer Name
+            <div class="text-xl py-7 px-4">
+              {{ reviewWithUser.reviewData.review }}
             </div>
 
-            <div>
-              Recommended
+            <div class="flex items-center border-t p-4">
+              <div class="flex items-center gap-1.5">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/512/6522/6522516.png"
+                  alt="User image"
+                  class="h-6 w-6"
+                />
+                <div>{{ reviewWithUser.userData.name }}</div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      </ng-container>
+
+      <ng-container *ngIf="!reviews || reviews.length === 0">
+        <span class="font-normal">No review available..</span>
+      </ng-container>
     </div>
   </div>
 </app-home>
