feat, fix: view analytics report, backend for view analytics

--- a/src/app/pages/dashboard/user-dashboard/dashboard-user-index.component.html
+++ b/src/app/pages/dashboard/user-dashboard/dashboard-user-index.component.html
@@ -102,7 +102,7 @@
               </li>
               <li>
                 <a
-                  routerLink="view-analytics"
+                  routerLink="ministry/view-analytics"
                   class="underline"
                   >View Analytics Report</a
                 >
@@ -126,7 +126,7 @@
                 </li>
                 <li>
                   <a
-                    routerLink="view-analytics"
+                    routerLink="merchant/view-analytics"
                     class="underline"
                     >View Analytics Report</a
                   >
