--- a/src/app/pages/view-analytics-report-ministry/view-analytics-report-ministry.component.html
+++ b/src/app/pages/view-analytics-report-ministry/view-analytics-report-ministry.component.html
@@ -1,24 +1,44 @@
 <app-dashboard>
   <div class="container max-w-7xl mx-auto p-4">
     <div class="bg-gray-100 p-4 rounded-lg shadow space-y-4">
-      <div class="flex flex-wrap justify-between items-center gap-5">
-        <div class="text-xl font-bold">Analytics Report</div>
+      <h1 class="text-xl font-semibold">
+        Select a merchant to view analytics report:
+      </h1>
+
+      <div
+        class="flex flex-col sm:flex-row sm:justify-between items-center gap-2 w-full"
+      >
+        <div class="w-full lg:w-auto">
+          <select
+            class="border-gray-300 rounded-lg focus:ring-0 focus:border-gray-300 w-full lg:w-auto"
+            (change)="onMerchantChange($event)"
+          >
+            <option disabled value="-1" selected>Select Merchant</option>
+            <option value="all">All</option>
+            <option
+              value="{{ merchant._id }}"
+              *ngFor="let merchant of merchants"
+            >
+              {{ merchant.name }}
+            </option>
+          </select>
+        </div>
 
         <form
           [formGroup]="sortByForm"
           (change)="sortTopProducts()"
-          class="w-full sm:w-auto"
+          class="w-full"
         >
-          <div class="flex flex-wrap gap-2">
+          <div class="flex flex-wrap sm:justify-end items-center gap-2">
             <select
-              class="border-gray-300 rounded-lg focus:ring-0 focus:border-gray-300"
+              class="border-gray-300 rounded-lg focus:ring-0 focus:border-gray-300 w-full sm:w-auto"
               formControlName="ascending"
             >
               <option value="asc">Ascending</option>
               <option value="dsc">Descending</option>
             </select>
             <select
-              class="border-gray-300 rounded-lg focus:ring-0 focus:border-gray-300"
+              class="border-gray-300 rounded-lg focus:ring-0 focus:border-gray-300 w-full sm:w-auto"
               formControlName="sort_by"
             >
               <option disabled value="-1">Sort by</option>
@@ -57,7 +77,9 @@
                   </th>
                   <td class="px-6 py-4">
                     <span class="line-clamp-2">
-                      {{ data.name }}
+                      <a routerLink="/products/{{ data._id }}" class="underline">{{
+                        data.name
+                      }}</a>
                     </span>
                   </td>
                   <td class="px-6 py-4">
@@ -78,21 +100,22 @@
                 </tr>
               </ng-container>
 
-              <ng-container *ngIf="!topProducts">
-                <td colspan="5">
-                  <div class="flex items-center justify-center">
-                    <span class="ml-2"> No data found </span>
-                  </div>
-                </td>
+              <ng-container *ngIf="!topProducts || topProducts.length === 0">
+                <tr class="bg-white border-b">
+                  <td class="px-6 py-4" colspan="5">
+                    <div class="flex items-center justify-center">
+                      <span class="ml-2"> No data found </span>
+                    </div>
+                  </td>
+                </tr>
               </ng-container>
             </ng-container>
 
             <ng-container *ngIf="isFetching">
-              <tr>
-                <td colspan="5">
+              <tr class="bg-white border-b">
+                <td class="px-6 py-4" colspan="5">
                   <div class="flex items-center justify-center">
-                    <div class="loading loading-bars loading-sm"></div>
-                    <span class="ml-2">Loading...</span>
+                    <span class="ml-2"> Loading... </span>
                   </div>
                 </td>
               </tr>
@@ -100,6 +123,7 @@
           </tbody>
         </table>
       </div>
+
       <apx-chart
         [series]="chartOptions.series!"
         [chart]="chartOptions.chart!"
